--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="content">
-    <form action="/" {{ url }} method="post">
+    <form action="{{ url_for("home")}}" method="post">
     <h1>Nu kör vi</h1>
     <input type="text" name="nm" id="nm" placeholder="SKriv något"><br><br>
     <input type="submit" value="Knapp">
