--- a/templates/home.html
+++ b/templates/home.html
@@ -12,11 +12,20 @@
 </head>
 <body>
 <div class="content">
-    <form action="{{ url_for("home")}}" method="post">
-    <h1>Nu kör vi</h1>
-    <input type="text" name="nm" id="nm" placeholder="SKriv något"><br><br>
-    <input type="submit" value="Knapp">
+    <form method="post">
+        <label>Product 1:  <input type="text" name="product1"></label>
+        <label>Product 2:  <input type="text" name="product2"></label>
+        <input type="submit" value="Compare">
     </form>
+    {% if product1_price and product2_price %}
+        <p>Product 1: {{ product1_price }}</p>
+        <p>Product 2: {{ product2_price }}</p>
+        {% if product1_price > product2_price %}
+            <p>Price 1 is more expensive</p>
+        {% elif product1_price < product2_price %}
+            <p>Product 2 is more expensive.</p>
+        {% endif %}
+    {% endif %}
 </div>
 </body>
 </html>
