--- a/templates/home.html
+++ b/templates/home.html
@@ -12,9 +12,10 @@
 </head>
 <body>
 <div class="content">
+    <h1>Mat-kollen</h1>
     <form method="post">
-        <label>Product 1:  <input type="text" name="product1"></label>
-        <label>Product 2:  <input type="text" name="product2"></label>
+        <label>Matvara 1:  <input type="text" name="product1"></label>
+        <label>Matvara 2:  <input type="text" name="product2"></label>
         <input type="submit" value="Compare">
     </form>
     {% if product1_price and product2_price %}
