--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,14 @@
             place-items: center;
             padding-top: 10%;
         }
+        .store_1{
+            place-items: left;
+            padding: 1%;
+        }
+        .store_2{
+            display: grid;
+            padding-right: 1%;
+        }
     </style>
 <title>Examen</title>
 </head>
@@ -15,11 +23,11 @@
     <h1>Mat-kollen</h1>
     <form method="post">
     <div class="store_1">
-        <label>Mataffär 1: <input type="text" name="store1"></label>
+        <label>Mataffär 1: <input type="text" name="store1"></label><br>
         <label>Matvara 1:  <input type="text" name="product1"></label>
     </div>
     <div class="store_2">
-        <label>Mataffär 2: <input type="text" name="store2"></label>
+        <label>Mataffär 2: <input type="text" name="store2"></label><br>
         <label>Matvara 2:  <input type="text" name="product2"></label>
     </div>
         <input type="submit" value="Compare">
