--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
     <style>
+        body{
+            background-color: bisque;
+        }
         .main{
             display: grid;
             place-items: center;
