--- a/templates/base.html
+++ b/templates/base.html
@@ -5,16 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
-    <style>
-        
-
-
+<style>
         body {
-            background-color: #f5f5f5;
+            background-color: hwb(130 5% 64%);
             font-family: Arial, Helvetica, sans-serif;
             margin: 0;
             padding: 0;
         }
+
 
         header {
             background-color: #007bff;
@@ -132,7 +130,7 @@
             place-items: center;
             padding-top: 10%;
         }
-    </style>
+</style>
 </head>
 <body>
 <div class="main">
