--- a/templates/home.html
+++ b/templates/home.html
@@ -106,10 +106,10 @@
 </form>
 {% if store1 and store2 and product %}
     {% if product1_price and product2_price %}
-        <p>{{ product1 }} kostar {{ product1_price }} kronor på {{ store1 }}</p>
-        <p>{{ product1 }} kostar {{ product2_price }} kronor på {{ store2 }}</p>
+        <p>{{ product }} kostar {{ product1_price }} kronor på {{ store1 }}</p>
+        <p>{{ product }} kostar {{ product2_price }} kronor på {{ store2 }}</p>
         {% if product1_price > product2_price %}
-            <p>{{ product1 }} är billigare på {{ store2 }} än på {{ store1 }}</p>
+            <p>{{ product }} är billigare på {{ store2 }} än på {{ store1 }}</p>
         {% elif product1_price < product2_price %}
             <p>{{ product }} är billigare på {{ store1 }} än på {{ store2 }}</p>
         {% else %}
