--- a/static/style.css
+++ b/static/style.css
@@ -87,3 +87,11 @@ a {
     display: none;
   }
 }
+
+footer {
+  display: flex;
+  justify-content: center;
+  padding: 5px;
+  background-color: #45a1ff;
+  color: #fff;
+}
