--- a/static/style.css
+++ b/static/style.css
@@ -88,10 +88,10 @@ a {
   }
 }
 
-footer {
+.footer {
   display: flex;
   justify-content: center;
-  padding: 5px;
   background-color: #45a1ff;
+  padding: 75px;
   color: #fff;
 }
