--- a/templates/base.html
+++ b/templates/base.html
@@ -128,7 +128,7 @@
 <body>
     <header>
         <nav class="nav">
-            <a href="/" class="logo">logo</a>
+            <a href="/" class="logo">MatSpar</a>
     
             <div class="hamburger">
             <span class="line"></span>
