--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  background-color: lightcyan;
+  background-color: bisque;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
@@ -21,129 +21,6 @@ a {
   font-size: 1.2rem;
   font-weight: bold;
   text-transform: uppercase;
-}
-
-/* nav styles */
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 20px;
-}
-
-.logo {
-  font-size: 1.8rem;
-  color: rgb(5, 5, 116);
-  padding-left: 20px;
-}
-
-.hamburger {
-  padding-right: 20px;
-  cursor: pointer;
-}
-
-.hamburger .line {
-  display: block;
-  width: 40px;
-  height: 5px;
-  margin-bottom: 10px;
-  background-color: black;
-}
-
-.nav__link {
-  position: fixed;
-  width: 94%;
-  top: 5rem;
-  left: 18px;
-  background-color: lightblue;
-}
-
-.nav__link a {
-  display: block;
-  text-align: center;
-  padding: 10px 0;
-}
-
-.nav__link a:hover {
-  background-color: lightcoral;
-}
-
-.hide {
-  display: none;
-}
-
-@media screen and (min-width: 600px) {
-  .nav__link {
-    display: block;
-    position: static;
-    width: auto;
-    margin-right: 20px;
-    background: none;
-  }
-
-  .nav__link a {
-    display: inline-block;
-    padding: 15px 20px;
-  }
-
-  .hamburger {
-    display: none;
-  }
-}
-
-.footer {
-  display: flex;
-  justify-content: center;
-  background-color: #45a1ff;
-  padding: 75px;
-  color: #fff;
-}
-
-header {
-  background-color: #007bff;
-  color: #fff;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem;
-}
-
-header h1 {
-  margin: 0;
-  font-size: 2.5rem;
-  font-weight: normal;
-}
-
-header nav ul {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-}
-
-header nav li {
-  margin-left: 2rem;
-}
-
-header nav a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 1.2rem;
-  font-weight: bold;
-  transition: all 0.3s ease-in-out;
-}
-
-header nav a:hover {
-  color: #f5f5f5;
-  transform: scale(1.1);
-}
-
-.container {
-  max-width: 1200px;
-  margin: 2rem auto;
-  padding: 0 2rem;
 }
 
 h1 {
@@ -173,7 +50,24 @@ label {
 }
 
 .main{
+  background-color: gold;
   display: grid;
   place-items: center;
   padding-top: 10%;
+
+}
+nav {
+  background-color: blue;
+  display: grid;
+  padding-top: 5%;
+}
+
+.footer {
+  background-color: blue;
+  display: grid;
+  padding-top: 5%;
+}
+
+.break {
+  background-color: black;
 }
