--- a/templates/base.html
+++ b/templates/base.html
@@ -6,63 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/style.css" type="text/css" media="screen">
     <title>{% block title %}{% endblock %}</title>
-<style>
 
-    input[type="text"],
-    input[type="submit"] {
-        padding: 0.5rem 1rem;
-        font-size: 1.2rem;
-        margin-bottom: 1rem;
-        border: none;
-        border-radius: 0.25rem;
-    }
 
-    input[type="text"]:focus {
-        outline: none;
-        box-shadow: 0 0 0 2px #007bff;
-    }
+    <style>
+        body,h1 {font-family: "Montserrat", sans-serif}
+        img {margin-bottom: -7px}
+        .w3-row-padding img {margin-bottom: 12px}
+        </style>
 
-    input[type="submit"] {
-        background-color: #007bff;
-        color: #fff;
-        cursor: pointer;
-        transition: all 0.3s ease-in-out;
-    }
-
-    input[type="submit"]:hover {
-        background-color: #f5f5f5;
-        color: #007bff;
-        transform: scale(1.05);
-    }
-
-</style>
 </head>
 <body>
-    <header>
-        <nav class="nav">
-            <a href="/" class="logo">MatSpar</a>
-    
-            <div class="hamburger">
-            <span class="line"></span>
-            <span class="line"></span>
-            <span class="line"></span>
-            </div>
-    
-            <div class="nav__link hide">
-            <a href="{{ url_for('home')}}">home</a>
-            <a href="#">JÄMFÖR</a>
-            <a href="{{ url_for('info')}}">Om oss</a>
-            <a href="#">Kontakt</a>
-            </div>
-        </nav>
-    </header>
+
+    <!-- Sidebar -->
+<nav class="w3-sidebar w3-black w3-animate-top w3-xxlarge" style="display:none;padding-top:150px" id="mySidebar">
+    <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-black w3-xxlarge w3-padding w3-display-topright" style="padding:6px 24px">
+      <i class="fa fa-remove"></i>
+    </a>
+    <div class="w3-bar-block w3-center">
+      <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black">About</a>
+      <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Photos</a>
+      <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Shop</a>
+      <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Contact</a>
+    </div>
+  </nav>
+  
+  <!-- !PAGE CONTENT! -->
+  <div class="w3-content" style="max-width:1500px">
+  
+  <!-- Header -->
+  <div class="w3-opacity">
+  <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
+  <div class="w3-clear"></div>
+  <header class="w3-center w3-margin-bottom">
+    <h1><b>PHOTOLIO</b></h1>
+    <p><b>A template made by w3.css for photographers.</b></p>
+    <p class="w3-padding-16"><button class="w3-button w3-black" onclick="myFunction()">Toggle Grid Padding</button></p>
+  </header>
+  </div>
+
+  
+  <!-- End Page Content -->
+  </div>
+
+        
+<!--         <a href="{{ url_for('info')}}">Om oss</a>-->   
 <div class="main">
     {% block content %}
     {% endblock %}
 </div>
-<div class="footer">
-    <h4>@MatSpar AB 2023</h4>
-</div>
+<footer class="footer" style="margin-top:128px"> 
+  </footer>
 </body>
 <script src="/static/script.js"></script>
 </html>
