--- a/static/style.css
+++ b/static/style.css
@@ -1,73 +1,216 @@
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Poppins', sans-serif;
 }
 
-html {
-  scroll-behavior: smooth;
+.header {
+  min-height: 100vh;
+  width: 100%;
+  background-image: url(/images/firewatch.jpg);
+  background-position: center;
+  background-size: cover;
+  position: relative;
 }
 
-body {
-  background-color: bisque;
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-  padding: 0;
+nav {
+  display: flex;
+  padding: 2% 6%;
+  justify-content: space-between;
+  align-items: center;
 }
 
-a {
-  text-decoration: none;
+.nav-links {
+  flex: 1;
+  text-align: right;
+}
+
+.nav-links ul li {
+  list-style: none;
+  display: inline-block;
+  padding: 8px;
+  padding: 8px 12px;
+  position: relative;
+}
+
+.nav-links ul li a {
   color: black;
-  font-size: 1.2rem;
-  font-weight: bold;
-  text-transform: uppercase;
+  font-size: 13px;
+}
+
+.nav-links ul li::after{
+  content: '';
+  width: 0%;
+  height: 2px;
+  background: black;
+  display: block;
+  margin: auto;
+  transition: 0.5s;
+}
+
+.nav-links ul li:hover::after{
+  width: 100%;
+}
+
+.text-box {
+  width: 90%;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  text-align: center;
+}
+
+.text-box h1{
+  font-size: 62px;
+}
+
+.text-box p{
+  margin: 10px 0 40px;
+  font-size: 14px;
+  color: #fff;
+}
+
+.hero-btn {
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  border: 1px solid #fff;
+  padding: 12px 34px;
+  font-size: 13px;
+  background: transparent;
+  position: relative;
+  cursor: pointer;
+}
+
+.hero-btn:hover {
+  border: 1px solid black;
+  background: black;
+  transition: 1s;
+}
+
+nav .fa-solid{
+  display: none;
+}
+
+@media(max-width: 700px){
+  .text-box h1{
+      font-size: 20px;
+  }
+
+  .nav-links ul li{
+      display: block;
+  }
+  .nav-links{
+      position: absolute;
+      background: red;
+      height: 100vh;
+      width: 200px;
+      top: 0;
+      right: -200xp;
+      text-align: left;
+      z-index: 2;
+      transition: 1s;
+  }
+
+  nav .fa-solid{
+      display: block;
+      color: black;
+      margin: 10px;
+      font-size: 22px;
+      cursor: pointer;
+  }
+
+  .nav-links ul{
+      padding: 30px;
+  }
+}
+
+/*-------Next part ---------*/
+
+.course{
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 100px;
 }
 
 h1 {
-  font-size: 3rem;
-  margin-bottom: 2rem;
-  text-align: center;
-  color: #007bff;
+  font-size: 36px;
+  font-weight: 600;
 }
 
-p {
-  font-size: 1.2rem;
-  line-height: 1.5;
-  margin-bottom: 1.5rem;
+p{
+  color: #777;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 22px;
+  padding: 10px;
 }
 
-form {
+.row {
+  margin-top: 5%;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 2rem;
+  justify-content: space-between;
 }
 
-label {
-  font-size: 1.2rem;
-  margin-right: 1rem;
+.course-col {
+  flex-basis: 31%;
+  background: #fff3f3;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  padding: 20px 12px;
+  box-sizing: border-box;
+  transition: 0.5s;
 }
 
-.main{
-  background-color: gold;
-  display: grid;
-  place-items: center;
-  padding-top: 10%;
+h3 {
+  text-align: center;
+  font-weight: 600;
+  margin: 10px 0;
+}
 
+.course-col:hover {
+  box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
 }
-nav {
-  background-color: blue;
-  display: grid;
-  padding-top: 5%;
+
+@media(max-width: 700px){
+  .row{
+      flex-direction: column;
+  }
 }
+
+/* nästa del. */
+
+.campus {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 50px;
+}
+
+/*----footer---*/
 
 .footer {
-  background-color: blue;
-  display: grid;
-  padding-top: 5%;
+  width: 100%;
+  text-align: center;
+  padding: 30px 0;
 }
 
-.break {
-  background-color: black;
+.footer h4{
+  margin-bottom: 25px;
+  margin-top: 20px;
+  font-weight: 600;
+}
+
+.icons .fa{
+  color: #f44336;
+  margin: 0 13px;
+  cursor: pointer;
+  padding: 18px 0;
+}
+
+.fa-heart-o {
+  color: #f44336;
 }
