--- a/templates/base.html
+++ b/templates/base.html
@@ -5,51 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/style.css" type="text/css" media="screen">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
     <title>{% block title %}{% endblock %}</title>
-
-
-    <style>
-        body,h1 {font-family: "Montserrat", sans-serif}
-        img {margin-bottom: -7px}
-        .w3-row-padding img {margin-bottom: 12px}
-        </style>
-
 </head>
 <body>
+<section class="header">
+    <nav>
+        <a href="index.html">LOGGO</a>
+        <div class="nav-links" id="navLinks">
+            <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
+            <ul>
+                <li><a href="{{ url_for('home') }}">HOME</a></li>
+                <li><a href="{{ url_for('info') }}">ABOUT</a></li>
+                <li><a href="">COURSE</a></li>
+                <li><a href="">BLOG</a></li>
+                <li><a href="">CONTACT</a></li>
+            </ul>
+        </div>
+        <i class="fa-solid fa-bars" onclick="showMenu()"></i>
+    </nav>
 
-    <!-- Sidebar -->
-<nav class="w3-sidebar w3-black w3-animate-top w3-xxlarge" style="display:none;padding-top:150px" id="mySidebar">
-    <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-black w3-xxlarge w3-padding w3-display-topright" style="padding:6px 24px">
-      <i class="fa fa-remove"></i>
-    </a>
-    <div class="w3-bar-block w3-center">
-      <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black">About</a>
-      <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Photos</a>
-      <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Shop</a>
-      <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Contact</a>
-    </div>
-  </nav>
-  
-  <!-- !PAGE CONTENT! -->
-  <div class="w3-content" style="max-width:1500px">
-  
-  <!-- Header -->
-  <div class="w3-opacity">
-  <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
-  <div class="w3-clear"></div>
-  <header class="w3-center w3-margin-bottom">
-    <h1><b>PHOTOLIO</b></h1>
-    <p><b>A template made by w3.css for photographers.</b></p>
-    <p class="w3-padding-16"><button class="w3-button w3-black" onclick="myFunction()">Toggle Grid Padding</button></p>
-  </header>
-  </div>
+<div class="text-box">
+    <h1>Content!</h1>
+    <p>Learn to make websites design with HTML and CSS.</p>
+    <a href="" class="hero-btn">Klick To Lern More</a>
+</div>
+</section>
 
-  
-  <!-- End Page Content -->
-  </div>
-
-        
-<!--         <a href="{{ url_for('info')}}">Om oss</a>-->   
 <div class="main">
     {% block content %}
     {% endblock %}
@@ -57,5 +42,4 @@
 <footer class="footer" style="margin-top:128px"> 
   </footer>
 </body>
-<script src="/static/script.js"></script>
 </html>
