--- a/static/style.css
+++ b/static/style.css
@@ -190,6 +190,79 @@ h3 {
   padding-top: 50px;
 }
 
+/* input food/store  */
+
+.store_input {
+  position: relative;
+  margin: auto;
+  width: 100%;
+  padding: 30px 30px;
+  border-radius: 3px;
+  overflow: hidden;
+}
+
+.store_input label {
+  font-size: 16px;
+  font-weight: 500;
+  transform-origin: 0 0;
+  transform: translate3d(0,0,0);
+  transition: all .2s ease;
+}
+
+.store_input input {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25%;
+  border: 0;
+  font-family: inherit;
+  padding: 16px 12px 0 12px;
+  height: 56px;
+  font-size: 16px;
+  font-weight: 400;
+  background: #fff3f3;
+  box-shadow: inset 0 -1px 0;
+  color: black;
+  transition: all .15s ease;
+}
+
+/* Food input */
+
+.food_input {
+  position: relative;
+  margin: auto;
+  width: 100%;
+  padding: 30px 30px;
+  border-radius: 3px;
+  overflow: hidden;
+}
+
+.food_input label {
+  font-size: 16px;
+  font-weight: 500;
+  transform-origin: 0 0;
+  transform: translate3d(0,0,0);
+  transition: all .2s ease;
+}
+
+.food_input input {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25%;
+  border: 0;
+  font-family: inherit;
+  padding: 16px 12px 0 12px;
+  height: 56px;
+  font-size: 16px;
+  font-weight: 400;
+  background: #fff3f3;
+  box-shadow: inset 0 -1px 0;
+  color: black;
+  transition: all .15s ease;
+}
+
+
+
+
 /*----footer---*/
 
 .footer {
