--- a/static/style.css
+++ b/static/style.css
@@ -13,6 +13,12 @@
   position: relative;
 }
 
+.header a {
+  font-size: 20px;
+  color: black;
+}
+
+
 nav {
   display: flex;
   padding: 2% 6%;
@@ -54,7 +60,7 @@ nav {
 
 .text-box {
   width: 90%;
-  color: #fff;
+  color: black;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -69,14 +75,14 @@ nav {
 .text-box p{
   margin: 10px 0 40px;
   font-size: 14px;
-  color: #fff;
+  color: black;
 }
 
 .hero-btn {
   display: inline-block;
   text-decoration: none;
-  color: #fff;
-  border: 1px solid #fff;
+  color: #f44336;
+  border: 1px solid black;
   padding: 12px 34px;
   font-size: 13px;
   background: transparent;
@@ -86,7 +92,7 @@ nav {
 
 .hero-btn:hover {
   border: 1px solid black;
-  background: black;
+  background: #fff3f3;
   transition: 1s;
 }
 
@@ -309,6 +315,7 @@ h3 {
   width: 100%;
   text-align: center;
   padding: 30px 0;
+  background-color: #fff3f3;
 }
 
 .footer h4{
