--- a/templates/base.html
+++ b/templates/base.html
@@ -28,9 +28,9 @@
     </nav>
 
 <div class="text-box">
-    <h1>Content!</h1>
-    <p>Learn to make websites design with HTML and CSS.</p>
-    <a href="" class="hero-btn">Klick To Lern More</a>
+    <h1>Mat-Kollen!</h1>
+    <p>Välkommen till Mat-Kollen, här kan du jämföra priser på matvaror från olika livsmedelsbutiker.</p>
+    <a href="#campus" class="hero-btn">Klicka för att Jämföra pris.</a>
 </div>
 </section>
 
@@ -40,8 +40,8 @@
 </div>
 
 <section class="footer" id="footer">
-    <h4>About Us</h4>
-    <p>Lite text om oss</p>
+    <h4>Kontakter</h4>
+    <p>Våra kontakter och location</p>
     <h3>Johannes H</h3>
     <div class="icons">
         <i class="fa-brands fa-facebook"></i>
