--- a/templates/home.html
+++ b/templates/home.html
@@ -17,8 +17,8 @@
 <!--Info section-->
 
 <section class="course" id="help">
-  <h1>Course we offer</h1>
-  <p>Här kommer lite mer info om allt.</p>
+  <h1>Våra samarbetspartners</h1>
+  <p>Här är våra sammarbetspartners inom livsmedelsbarnchen som .</p>
 
   <div class="row">
       <div class="course-col">
