--- a/templates/home.html
+++ b/templates/home.html
@@ -22,18 +22,32 @@
 
   <div class="row">
       <div class="course-col">
-          <h3>Svårt</h3>
-          <p>Lite Konstig text</p>
+          <h3>ICA</h3>
+          <p>En liten bild på ica</p>
       </div>
       <div class="course-col">
-          <h3>Medel</h3>
-          <p>Lite Konstig text</p>
+          <h3>MAXI</h3>
+          <p>En liten bild på maxi</p>
       </div>
       <div class="course-col">
-          <h3>lätt</h3>
-          <p>Lite Konstig text</p>
+          <h3>COOP</h3>
+          <p>En liten bild på coop</p>
       </div>
   </div>
+  <div class="row2">
+    <div class="course-col">
+        <h3>Hemköp</h3>
+        <p>En liten bild på Hemköp</p>
+    </div>
+    <div class="course-col">
+        <h3>Lidl</h3>
+        <p>En liten bild på Lidl</p>
+    </div>
+    <div class="course-col">
+        <h3>Citygross</h3>
+        <p>En liten bild på Citygross</p>
+    </div>
+</div>
 </section>
 
 <!--Compare section-->
