--- a/static/style.css
+++ b/static/style.css
@@ -220,6 +220,8 @@ h3 {
   transform-origin: 0 0;
   transform: translate3d(0,0,0);
   transition: all .2s ease;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .store_input input {
@@ -236,6 +238,7 @@ h3 {
   box-shadow: inset 0 -1px 0;
   color: black;
   transition: all .15s ease;
+  border-radius: 10px;
 }
 
 /* Food input */
@@ -271,6 +274,7 @@ h3 {
   box-shadow: inset 0 -1px 0;
   color: black;
   transition: all .15s ease;
+  border-radius: 10px;
 }
 
 .comp_but {
