--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 <body>
 <section class="header">
     <nav>
-        <a href="index.html">Mat-Kollen</a>
+        <a href="{{ url_for('home') }}">Mat-Kollen</a>
         <div class="nav-links" id="navLinks">
             <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
             <ul>
