--- a/templates/home.html
+++ b/templates/home.html
@@ -23,28 +23,34 @@
   <div class="row">
       <div class="course-col">
           <h3>ICA</h3>
+          <img src="/static/images/ica.jpg" alt="MAXI" style="width: 150px">
           <p>En liten bild på ica</p>
       </div>
       <div class="course-col">
           <h3>MAXI</h3>
+          <img src="/static/images/maxi.jpg" alt="MAXI" style="width: 150px">
           <p>En liten bild på maxi</p>
       </div>
       <div class="course-col">
           <h3>COOP</h3>
+          <img src="/static/images/coop.jpg" alt="MAXI" style="width: 150px">
           <p>En liten bild på coop</p>
       </div>
   </div>
   <div class="row2">
     <div class="course-col">
         <h3>Hemköp</h3>
+        <img src="/static/images/hemkop.jpg" alt="MAXI" style="width: 150px">
         <p>En liten bild på Hemköp</p>
     </div>
     <div class="course-col">
         <h3>Lidl</h3>
+        <img src="/static/images/lidl.jpg" alt="MAXI" style="width: 150px">
         <p>En liten bild på Lidl</p>
     </div>
     <div class="course-col">
         <h3>Citygross</h3>
+        <img src="/static/images/city.jpg" alt="MAXI" style="width: 150px">
         <p>En liten bild på Citygross</p>
     </div>
 </div>
