--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,11 @@
 
 <section class="course" id="help">
   <h1>Våra samarbetspartners</h1>
-  <p>Här är våra sammarbetspartners inom livsmedelsbarnchen som .</p>
+  <p>För att kunna erbjuda en prisjämförelsetjänst inom livsmedelsbranschen är det viktigt att ha samarbetspartners som kan tillhandahålla aktuell och korrekt prisinformation.<br><br>
+    Genom att ha samarbetspartners inom livsmedelsbranschen kan man få tillgång till priser från olika leverantörer och butiker,<br><br>
+    vilket möjliggör en mer omfattande jämförelse av priser och produkter. Detta kan i sin tur hjälpa konsumenter att fatta informerade beslut om var de ska handla och vad de ska köpa,
+    baserat på faktorer som kvalitet, pris och tillgänglighet.<br><br>
+    Genom att arbeta tillsammans med samarbetspartners kan man skapa en mer komplett och användbar prisjämförelsetjänst som hjälper konsumenterna att spara tid och pengar när de handlar matvaror.</p>
 
   <div class="row">
       <div class="course-col">
@@ -94,8 +98,13 @@
 
     <section class="conten_us" id="info">
         <h4>Om oss</h4>
-        <p>Lite text om oss som ska vara här!</p>
-        <h3>Johannes är bäst</h3>
+        <p>Vi på Mat-Kollen skapa denna tjänst för att hjälpa människor att jämföra priser på mat särskilt viktigt i dagens ekonomi, med tanke på inflationen.<br><br>
+            Inflationen innebär att priset på varor och tjänster stiger över tid,<br><br> 
+            vilket kan göra det svårt för människor att hålla koll på vad saker kostar och hur mycket de behöver betala för sina dagliga behov.<br><br>
+            Genom att använda en prisjämförelsetjänst kan människor enkelt och snabbt jämföra priser på olika livsmedel och hitta de bästa erbjudandena.<br><br>
+            Det kan också hjälpa dem att spara pengar och minska kostnaderna för matinköp, vilket kan vara särskilt viktigt för dem med en begränsad budget.<br><br>
+            På så sätt kan en prisjämförelsetjänst hjälpa människor att hantera inflationen och bibehålla sin ekonomiska stabilitet.</p>
+        <h3>Vi Är Här För Att Hjälpa Dig Spara Pengar!</h3>
     </section>
 
 <script>
