--- a/templates/home.html
+++ b/templates/home.html
@@ -98,12 +98,17 @@
 
     <section class="conten_us" id="info">
         <h4>Om oss</h4>
+        <div class="image">
+            <img src="" alt=""><!--Insert image-->
+        </div>
+        <div class="text">
         <p>Vi på Mat-Kollen skapa denna tjänst för att hjälpa människor att jämföra priser på mat särskilt viktigt i dagens ekonomi, med tanke på inflationen.<br><br>
             Inflationen innebär att priset på varor och tjänster stiger över tid,<br><br> 
             vilket kan göra det svårt för människor att hålla koll på vad saker kostar och hur mycket de behöver betala för sina dagliga behov.<br><br>
             Genom att använda en prisjämförelsetjänst kan människor enkelt och snabbt jämföra priser på olika livsmedel och hitta de bästa erbjudandena.<br><br>
             Det kan också hjälpa dem att spara pengar och minska kostnaderna för matinköp, vilket kan vara särskilt viktigt för dem med en begränsad budget.<br><br>
             På så sätt kan en prisjämförelsetjänst hjälpa människor att hantera inflationen och bibehålla sin ekonomiska stabilitet.</p>
+        </div>
         <h3>Vi Är Här För Att Hjälpa Dig Spara Pengar!</h3>
     </section>
 
