--- a/templates/home.html
+++ b/templates/home.html
@@ -94,7 +94,7 @@
 {% endif %}
 </section>
 
-    <!--about us-->
+    <!--about us content-->
 
     <section class="conten_us" id="info">
         <h4>Om oss</h4>
