--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
       <div class="course-col">
           <h3>ICA</h3>
           <img src="/static/images/ica.jpg" alt="MAXI" style="width: 150px">
-          <p>En liten bild på ica</p>
+          <p>En liten bild på ica där vi vill ha en liten text också.</p>
       </div>
       <div class="course-col">
           <h3>MAXI</h3>
