--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
 <!--Info section-->
 
 <section class="course" id="help">
-  <h1>Våra samarbetspartners</h1>
+  <h1>Våra samarbetspartners.</h1>
   <p>För att kunna erbjuda en prisjämförelsetjänst inom livsmedelsbranschen är det viktigt att ha samarbetspartners som kan tillhandahålla aktuell och korrekt prisinformation.<br><br>
     Genom att ha samarbetspartners inom livsmedelsbranschen kan man få tillgång till priser från olika leverantörer och butiker,<br><br>
     vilket möjliggör en mer omfattande jämförelse av priser och produkter. Detta kan i sin tur hjälpa konsumenter att fatta informerade beslut om var de ska handla och vad de ska köpa,
